# Webots_WCR_Controller

./: README.md
WCRCtrl_0602/0602_3/: 0602_3.dsp  0602_3.dsw  0602_3.opt  0602_3.plg  lab3.dsp  lab3.dsw  lab3.ncb  lab3.opt  lab3.plg
WCRCtrl_0602/0602_3/Debug/: lab3.ilk  lab3.pch  vc60.idb
cpp/GeckoRunner/: CMakeLists.txt
cpp/GeckoRunner/src/: CMakeLists.txt  StateMachine.cpp
cpp/former_version/: lab3.cpp
cpp/former_version/vs_project/: a.out  lab3.opt
cpp/former_version/vs_project/Debug/: 0602_3.ilk  0602_3.pch  lab3.ilk  lab3.pch  vc60.idb
cpp/former_version/vs_project/Release/: lab3.pch
cpp/vs_project/: 0602_3.dsp  0602_3.dsw  0602_3.ncb  0602_3.plg  lab3.cpp  lab3.ncb  lab3.plg
cpp/vs_project/Release/: vc60.idb
python/: RobotRunner.py  TargetGenerator.py
webot_simulation/controllers/GeckoRunner/: GeckoRunner  GeckoRunner.cpp  Makefile  Motion.cpp  Motion.hpp  a.out  main.cpp
webot_simulation/controllers/GeckoRunner/BACKUP/: Motion.cpp  Motion.hpp  main.cpp
webot_simulation/controllers/gecko_controller/: gecko_controller.py
webot_simulation/controllers/my_controller/: my_controller.py
webot_simulation/simulation/: .first_world.wbproj  first_world.wbt
webot_simulation/simulation/backup/0523/: gecko.wbt
webot_simulation/simulation/backup/0523/controllers/legged_control_0413/: controller.h  legged_control_0413.c  webotsInterface.c  webotsInterface.h
webot_simulation/simulation/backup/0523/controllers/my_controller/: my_controller.c
webot_simulation/simulation/backup/0523/worlds/: .empty.wbproj  empty.wbt
(+18 files in other folders)
